// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dauphin cli initApplicationFlat filters out other allocators than expected 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-12345678",
    "applicationProviderId": "12345678",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": "ej",
    "grantedAmount": 2000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "gestionnaire",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet1 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 - ej - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 2400,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-12345678-2022",
    "updateDate": Any<Date>,
  },
]
`;

exports[`Dauphin cli initApplicationFlat groups actions of same application 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-87654321|12345678",
    "applicationProviderId": "87654321|12345678",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": "ej",
    "grantedAmount": 8000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "gestionnaire",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet2 - titre|projet1 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 - ej - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 8400,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-87654321|12345678-2022",
    "updateDate": Any<Date>,
  },
]
`;

exports[`Dauphin cli initApplicationFlat keeps action-level dauphin data if nothing is found from gispro 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-87654321",
    "applicationProviderId": "87654321",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": null,
    "grantedAmount": 4000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet2 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 -  - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 4200,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-87654321-2022",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-12345678",
    "applicationProviderId": "12345678",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": null,
    "grantedAmount": 4000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet1 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 -  - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 4200,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-12345678-2022",
    "updateDate": Any<Date>,
  },
]
`;

exports[`Dauphin cli initApplicationFlat keeps action-level dauphin data if several records are found from gispro 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-87654321",
    "applicationProviderId": "87654321",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": null,
    "grantedAmount": 4000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet2 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 -  - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 4200,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-87654321-2022",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-12345678",
    "applicationProviderId": "12345678",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": null,
    "grantedAmount": 4000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet1 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 -  - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 4200,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-12345678-2022",
    "updateDate": Any<Date>,
  },
]
`;

exports[`Dauphin cli initApplicationFlat saves adapted simple dauphin data 1`] = `
[
  {
    "allocatorId": null,
    "allocatorIdType": null,
    "allocatorName": "",
    "applicationId": "dauphin-12345678",
    "applicationProviderId": "12345678",
    "beneficiaryCompanyId": Siren {
      "identifier": "012345678",
    },
    "beneficiaryCompanyIdType": "siren",
    "beneficiaryEstablishmentId": Siret {
      "identifier": "01234567890123",
    },
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": null,
    "cofinancersNames": null,
    "cofinancingRequested": null,
    "confinancersId": null,
    "conventionDate": null,
    "decisionDate": null,
    "decisionReference": null,
    "depositDate": 2021-12-07T00:00:00.000Z,
    "ej": "ej",
    "grantedAmount": 4000,
    "idRAE": null,
    "instructiveDepartementId": null,
    "instructiveDepartmentIdType": null,
    "instructiveDepartmentName": "gestionnaire",
    "joinKeyDesc": null,
    "joinKeyId": null,
    "managingAuthorityId": "N/A",
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "projet1 - titre",
    "paymentCondition": null,
    "paymentConditionDesc": null,
    "paymentId": "01234567890123 - ej - 2022",
    "paymentPeriodDates": null,
    "pluriannual": true,
    "pluriannualYears": null,
    "provider": "dauphin",
    "requestYear": 2021,
    "requestedAmount": 4200,
    "scheme": "thematique - titre - Politique de la ville",
    "statusLabel": "Accordé",
    "subScheme": null,
    "subventionPercentage": null,
    "totalAmount": null,
    "ueNotification": null,
    "uniqueId": "dauphin-12345678-2022",
    "updateDate": Any<Date>,
  },
]
`;
